# simple-time-tracker

./: Makefile  README.md  pyproject.toml
static/: play.jpg:Zone.Identifier
time_tracker/: forms.py  models.py  serializers.py  settings.py  urls.py  views.py
time_tracker/migrations/: 0001_initial.py  0002_task_status.py  0003_alter_task_timestamp.py  0004_task_timespend.py  0005_alter_task_timestamp.py  0006_alter_task_timestamp.py  0007_alter_task_timestamp.py  0008_alter_task_timestamp.py  0009_alter_task_timestamp.py
time_tracker/templates/: index.html
